fixed pages layout issues after merging

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -826,11 +826,11 @@ body:has(a[style="--bg: var(--gradient-6);"]:focus) {
   }
   .navbar-default.transparent {
     box-shadow: 3px 5px 12px 1px rgba(0, 0, 0, 0.15);
-    background: #fff;
+    /* background: #fff; */
   }
-  .progress-main p {
+  /* .progress-main p {
     color: #fff!important;
-  }
+  } */
   .main-logo {
     width: 80px;
   }
